feat: Flujo profesor completo